mType/tests/testFiles/error/error/importNonExistentFile.mt
import "non_existent_file.vf";
int x = 10;